--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,13 +1,33 @@
+<section>
+  <div class="card">
+  <h3 class="card-header">Create New Post</h3>
+
+  <form class="new-post-form card-body">
+    <div>
+      <label for="post-title" class="form-label">Title</label>
+      <input type="text" id="post-title" name="post-title" />
+    </div>
+    <div>
+      <label for="post-url" class="form-label">Content</label>
+      <input id="post-url" name="post-url"/>
+    </div>
+    <button type="submit" class="btn">Create</button>
+  </form>
+  </div>
+</section>
+
 {{#if posts.length}}
 <section>
   <h2>Your Posts</h2>
+  <ol>
     {{#each posts as |post|}}
-      {{> dashboard-postinfo post}}
+    <li>
+      {{> post-info post}}
+      <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
+    </li>
     {{/each}}
-
+  </ol>
 </section>
 {{/if}}
-
-<button type="submit" class="btn"><a class="link" href="/dashboard/new">+ New Post</a></button>
 
 <script src="/javascript/add-post.js"></script>
